--- a/el3kt2ik/Movies-MASTER.yml
+++ b/el3kt2ik/Movies-MASTER.yml
@@ -1,60 +1,3 @@
----
-#collections:
-  #Movie Watchlist:
-    #trakt_watchlist:
-      #- me
-    #sort_title: ++3Watchlist
-    #smart_label: release.desc
-    #sync_mode: sync
-    #label: admin
-    #visible_home: true
-    #visible_shared: false
-    #visible_library: false
-    #url_poster: https://i.imgur.com/IJMWyvo.png
-    #url_background: https://wallpaper.dog/large/20509069.jpg
-
-  #Trending Movies:
-    #trakt_trending: 40
-    #tmdb_trending_daily: 40
-    #tmdb_trending_weekly: 40
-    #sort_title: ++1Trending
-    #sync_mode: sync
-    #smart_label: added.desc
-    #summary: Movies Trending across the internet
-    #url_poster: https://i.imgur.com/AVCNmB0.png
-    #url_background: https://wallpaper.dog/large/20509069.jpg
-    #visible_home: true
-    #visible_shared: true
-    #visible_library: true
-
-  #Top Rated Movies:
-    #imdb_list: https://www.imdb.com/search/title/?groups=top_250&count=250
-    #tmdb_top_rated: 250
-    #sort_title: ++2Top Rated
-    #sync_mode: sync
-    #schedule: weekly(wednesday), weekly(sunday)
-    #smart_label: random
-    #summary: IMDb Top Rated Movies
-    #url_poster: https://i.imgur.com/7h1vaxl.png
-    #url_background: https://wallpaper.dog/large/20509069.jpg
-    #visible_home: false
-    #visible_shared: false
-    #visible_library: true
-
-  #DV-Atmos:
-    #plex_all: true
-    #filters:
-      #filepath:
-        #- MoviesDV
-        #- Atmos
-      #filepath.not:
-        #- DTS-X
-        #- TrueHD
-        #- DTS-HD
-    #item_overlay:
-      #name: DV-Atmos
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-Atmos/overlay.png
-    #build_collection: false
 
   1080P-Atmos:
     plex_search:
@@ -117,12 +60,29 @@
       #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-DTS-X/overlay.png
     #build_collection: false
 
+  1080P-DTS-X:
+    plex_search:
+      all:
+        resolution: 1080P
+    filters:
+      filepath:
+       - DTS-X
+      filepath.not:
+        - 4K
+        - Atmos
+        - TrueHD
+        - DTS-HD
+    item_overlay:
+      name: 1080P-DTS-X
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-X/overlay.png 
+    build_collection: false
+
   DTS-X:
     plex_all: true
     filters:
       filepath:
         #- MoviesDV
-        - DTS-X
+        - 
       filepath.not:
         - Atmos
         - TrueHD
