--- a/el3kt2ik/Movies-MASTER.yml
+++ b/el3kt2ik/Movies-MASTER.yml
@@ -15,35 +15,20 @@
       name: 1080P-Atmos
       url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-Atmos/overlay.png 
     build_collection: false
-  
-  Atmos:
-    plex_all: true
-    filters:
-      filepath:
-        #- MoviesDV
-        - Atmos
-      filepath.not:
-        - DTS-X
-        - TrueHD
-        - DTS-HD
-    item_overlay:
-      name: Atmos
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/Atmos/overlay.png
-    build_collection: false
 
-  DV:
-    plex_all: true
-    filters:
-      filepath: MoviesDV
-      filepath.not:
-        - Atmos
-        - DTS-X
-        - TrueHD
-        - DTS-HD
-    item_overlay:
-      name: DV
-      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/DV/overlay.png
-    build_collection: false
+  #DV:
+    #plex_all: true
+    #filters:
+      #filepath: MoviesDV
+      #filepath.not:
+        #- Atmos
+        #- DTS-X
+        #- TrueHD
+        #- DTS-HD
+    #item_overlay:
+      #name: DV
+      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/DV/overlay.png
+    #build_collection: false
 
   1080P-DTS-X:
     plex_search:
@@ -81,13 +66,15 @@
     build_collection: false
 
   1080P-TrueHD-Atmos:
-    plex_all: true
+    plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-       # - MoviesDV
         - TrueHD
         - Atmos
       filepath.not:
+	      - 4K
         - DTS-X
         - DTS-HD
         - EAC3
@@ -96,36 +83,38 @@
       url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-TrueHD-Atmos/overlay.png
     build_collection: false
 
-  DTS-HD:
-    plex_all: true
+  1080P-DTS-HD:
+     plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-        #- MoviesDV
         - DTS-HD
       filepath.not:
         - DTS-X
         - TrueHD
         - Atmos
+	      - 4K
     item_overlay:
-      name: DTS-HD
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/DTS-HD/overlay.png
+      name: 1080P-DTS-HD
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-HD/overlay.png
     build_collection: false
 
-4K-HDR Overlay:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: true
-    item_overlay:
-      name: 4K-HDR
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K-HDR/overlay.png
-    build_collection: false
-4K Overlay:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: false
-    item_overlay:
-      name: 4K
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K/overlay.png
-    build_collection: false
+#4K-HDR Overlay:
+    #plex_search:
+      #all:
+        #resolution: 4K
+        #hdr: true
+    #item_overlay:
+      #name: 4K-HDR
+      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K-HDR/overlay.png
+    #build_collection: false
+#4K Overlay:
+    #plex_search:
+      #all:
+        #resolution: 4K
+        #hdr: false
+    #item_overlay:
+      #name: 4K
+      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K/overlay.png
+    #build_collection: false
