--- a/el3kt2ik/Movies-4K-DV.yml
+++ b/el3kt2ik/Movies-4K-DV.yml
@@ -1,5 +1,5 @@
----
-collections:
+
+  collections:
   Movie Watchlist:
     trakt_watchlist:
       - me
@@ -40,190 +40,122 @@ collections:
     visible_home: false
     visible_shared: false
     visible_library: true
-
-  #DV-Atmos:
-    #plex_all: true
-    #filters:
-      #filepath:
-        #- MoviesDV
-        #- Atmos
-      #filepath.not:
-        #- DTS-X
-        #- TrueHD
-        #- DTS-HD
-    #item_overlay:
-      #name: DV-Atmos
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-Atmos/overlay.png
-    #build_collection: false
-
-  Atmos:
-    plex_all: true
+  
+  1080P-Atmos:
+    plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-        #- MoviesDV
-        - Atmos
+       - Atmos
       filepath.not:
+        - 4K
         - DTS-X
         - TrueHD
         - DTS-HD
     item_overlay:
-      name: Atmos
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/Atmos/overlay.png
+      name: 1080P-Atmos
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-Atmos/overlay.png 
     build_collection: false
 
-  DV:
-    plex_all: true
-    filters:
-      filepath: MoviesDV
-      filepath.not:
-        - Atmos
-        - DTS-X
-        - TrueHD
-        - DTS-HD
-    item_overlay:
-      name: DV
-      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV/overlay.png
-    build_collection: false
-
-  #DV-DTS-X:
+  #DV:
     #plex_all: true
     #filters:
-      #filepath:
-        #- MoviesDV
-        #- DTS-X
+      #filepath: MoviesDV
       #filepath.not:
         #- Atmos
+        #- DTS-X
         #- TrueHD
         #- DTS-HD
     #item_overlay:
-      #name: DV-DTS-X
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-DTS-X/overlay.png
+      #name: DV
+      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/DV/overlay.png
     #build_collection: false
 
-  DTS-X:
-    plex_all: true
+  1080P-DTS-X:
+    plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-        #- MoviesDV
-        - DTS-X
+       - DTS-X
       filepath.not:
+        - 4K
         - Atmos
         - TrueHD
         - DTS-HD
     item_overlay:
-      name: DTS-X
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DTS-X/overlay.png
+      name: 1080P-DTS-X
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-X/overlay.png 
     build_collection: false
 
-  #DV-TrueHD:
-    #plex_all: true
-    #filters:
-      #filepath:
-        #- MoviesDV
-        #- TrueHD
-      #filepath.not:
-        #- DTS-X
-        #- DTS-HD
-        #- Atmos
-        #- EAC3
-    #item_overlay:
-      #name: DV-TrueHD
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-TrueHD/overlay.png
-    #build_collection: false
-
-  TrueHD:
-    plex_all: true
+  1080P-TrueHD:
+    plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-        #- MoviesDV
-        - TrueHD
+       - TrueHD
       filepath.not:
+        - 4K
+        - Atmos
         - DTS-X
         - DTS-HD
-        - Atmos
-        - EAC3
     item_overlay:
-      name: TrueHD
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/True-HD/overlay.png
+      name: 1080P-TrueHD
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-True-HD/overlay.png
     build_collection: false
 
-  #DV-TrueHD-Atmos:
-    #plex_all: true
-    #filters:
-      #filepath:
-        #- MoviesDV
-        #- TrueHD
-        #- Atmos
-      #filepath.not:
-        #- DTS-X
-        #- DTS-HD
-        #- EAC3
-    #item_overlay:
-      #name: DV-TrueHD-Atmos
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-TrueHD-Atmos/overlay.png
-    #build_collection: false
-
-  TrueHD-Atmos:
-    plex_all: true
+  1080P-TrueHD-Atmos:
+    plex_search:
+      all:
+        resolution: 1080P
     filters:
       filepath:
-       # - MoviesDV
         - TrueHD
         - Atmos
       filepath.not:
+        - 4K
         - DTS-X
         - DTS-HD
         - EAC3
     item_overlay:
-      name: TrueHD-Atmos
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/TrueHD-Atmos/overlay.png
+      name: 1080P-TrueHD-Atmos
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-TrueHD-Atmos/overlay.png
     build_collection: false
 
-  #DV-DTS-HD:
-    #plex_all: true
-    #filters:
-      #filepath:
-        #- MoviesDV
-        #- DTS-HD
-      #filepath.not:
-        #- DTS-X
-        #- TrueHD
-        #- Atmos
-    #item_overlay:
-      #name: DV-DTS-HD
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-DTS-HD/overlay.png
-    #build_collection: false
-
-  DTS-HD:
-    plex_all: true
-    filters:
+  1080P-DTS-HD:
+     plex_search:
+      all:
+        resolution: 1080P
+     filters:
       filepath:
-        #- MoviesDV
         - DTS-HD
       filepath.not:
+        - 4K
         - DTS-X
         - TrueHD
         - Atmos
-    item_overlay:
-      name: DTS-HD
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DTS-HD/overlay.png
-    build_collection: false
+     item_overlay:
+      name: 1080P-DTS-HD
+      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-HD/overlay.png
+     build_collection: false
 
-4K-HDR Overlay:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: true
-    item_overlay:
-      name: 4K-HDR
-      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/4K-HDR/overlay.png
-    build_collection: false
-4K Overlay:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: false
-    item_overlay:
-      name: 4K
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/4K/overlay.png
-    build_collection: false
+#4K-HDR Overlay:
+    #plex_search:
+      #all:
+        #resolution: 4K
+        #hdr: true
+    #item_overlay:
+      #name: 4K-HDR
+      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K-HDR/overlay.png
+    #build_collection: false
+#4K Overlay:
+    #plex_search:
+      #all:
+        #resolution: 4K
+        #hdr: false
+    #item_overlay:
+      #name: 4K
+      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K/overlay.png
+    #build_collection: false
