--- a/el3kt2ik/Movies-4K-DV.yml
+++ b/el3kt2ik/Movies-4K-DV.yml
@@ -1,5 +1,5 @@
-
-  collections:
+---
+collections:
   Movie Watchlist:
     trakt_watchlist:
       - me
@@ -40,122 +40,94 @@
     visible_home: false
     visible_shared: false
     visible_library: true
-  
-  1080P-Atmos:
-    plex_search:
-      all:
-        resolution: 1080P
+
+  DV-Atmos:
+    plex_all: true
     filters:
       filepath:
-       - Atmos
+        - MoviesDV
+        - Atmos
       filepath.not:
-        - 4K
         - DTS-X
         - TrueHD
         - DTS-HD
     item_overlay:
-      name: 1080P-Atmos
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-Atmos/overlay.png 
+      name: DV-Atmos
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-Atmos/overlay.png
     build_collection: false
 
-  #DV:
-    #plex_all: true
-    #filters:
-      #filepath: MoviesDV
-      #filepath.not:
-        #- Atmos
-        #- DTS-X
-        #- TrueHD
-        #- DTS-HD
-    #item_overlay:
-      #name: DV
-      #url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/DV/overlay.png
-    #build_collection: false
-
-  1080P-DTS-X:
-    plex_search:
-      all:
-        resolution: 1080P
+  DV:
+    plex_all: true
     filters:
-      filepath:
-       - DTS-X
+      filepath: MoviesDV
       filepath.not:
-        - 4K
-        - Atmos
-        - TrueHD
-        - DTS-HD
-    item_overlay:
-      name: 1080P-DTS-X
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-X/overlay.png 
-    build_collection: false
-
-  1080P-TrueHD:
-    plex_search:
-      all:
-        resolution: 1080P
-    filters:
-      filepath:
-       - TrueHD
-      filepath.not:
-        - 4K
         - Atmos
         - DTS-X
+        - TrueHD
         - DTS-HD
     item_overlay:
-      name: 1080P-TrueHD
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-True-HD/overlay.png
+      name: DV
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV/overlay.png
     build_collection: false
 
-  1080P-TrueHD-Atmos:
-    plex_search:
-      all:
-        resolution: 1080P
+  DV-DTS-X:
+    plex_all: true
     filters:
       filepath:
+        - MoviesDV
+        - DTS-X
+      filepath.not:
+        - Atmos
+        - TrueHD
+        - DTS-HD
+    item_overlay:
+      name: DV-DTS-X
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-DTS-X/overlay.png
+    build_collection: false
+
+  DV-TrueHD:
+    plex_all: true
+    filters:
+      filepath:
+        - MoviesDV
+        - TrueHD
+      filepath.not:
+        - DTS-X
+        - DTS-HD
+        - Atmos
+        - EAC3
+    item_overlay:
+      name: DV-TrueHD
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-TrueHD/overlay.png
+    build_collection: false
+
+  DV-TrueHD-Atmos:
+    plex_all: true
+    filters:
+      filepath:
+        - MoviesDV
         - TrueHD
         - Atmos
       filepath.not:
-        - 4K
         - DTS-X
         - DTS-HD
         - EAC3
     item_overlay:
-      name: 1080P-TrueHD-Atmos
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-TrueHD-Atmos/overlay.png
+      name: DV-TrueHD-Atmos
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-TrueHD-Atmos/overlay.png
     build_collection: false
 
-  1080P-DTS-HD:
-     plex_search:
-      all:
-        resolution: 1080P
-     filters:
+  DV-DTS-HD:
+    plex_all: true
+    filters:
       filepath:
+        - MoviesDV
         - DTS-HD
       filepath.not:
-        - 4K
         - DTS-X
         - TrueHD
         - Atmos
-     item_overlay:
-      name: 1080P-DTS-HD
-      url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/1080P-DTS-HD/overlay.png
-     build_collection: false
-
-#4K-HDR Overlay:
-    #plex_search:
-      #all:
-        #resolution: 4K
-        #hdr: true
-    #item_overlay:
-      #name: 4K-HDR
-      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K-HDR/overlay.png
-    #build_collection: false
-#4K Overlay:
-    #plex_search:
-      #all:
-        #resolution: 4K
-        #hdr: false
-    #item_overlay:
-      #name: 4K
-      #url: https://github.com/el3kt2ik/Plex-Meta-Manager-Configs/raw/master/el3kt2ik/overlays/4K/overlay.png
-    #build_collection: false
+    item_overlay:
+      name: DV-DTS-HD
+      url: https://github.com/djnield/Plex-Meta-Manager-Configs/raw/master/djnield/overlays/DV-DTS-HD/overlay.png
+    build_collection: false
